{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 286,
  "lineage": "c53f09a4-05b3-4efd-f24b-5378d66d1f45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:258372532888:instance/i-080501882c1d1f0a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cw-metrics",
            "id": "i-080501882c1d1f0a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keytf1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c122d3a1244fb413",
            "private_dns": "ip-10-0-10-11.ec2.internal",
            "private_ip": "10.0.10.11",
            "public_ip": "54.227.7.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0853fe41379e9a189",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060264b00bf85a033",
            "tags": {
              "Env": "testing",
              "Name": "TFcourse-1"
            },
            "tags_all": {
              "Env": "testing",
              "Name": "TFcourse-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a8f6b4e0f5dc488"
            ]
          },
          "dependencies": [
            "aws_security_group.tf",
            "aws_subnet.subnettf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:258372532888:instance/i-032ace101ecadbea0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cw-metrics",
            "id": "i-032ace101ecadbea0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keytf1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be547b615dae4c4b",
            "private_dns": "ip-10-0-10-12.ec2.internal",
            "private_ip": "10.0.10.12",
            "public_ip": "54.226.100.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5b9126d281e20c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060264b00bf85a033",
            "tags": {
              "Env": "testing",
              "Name": "TFcourse-2"
            },
            "tags_all": {
              "Env": "testing",
              "Name": "TFcourse-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a8f6b4e0f5dc488"
            ]
          },
          "dependencies": [
            "aws_security_group.tf",
            "aws_subnet.subnettf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:258372532888:instance/i-004502fb5eddf5cfc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cw-metrics",
            "id": "i-004502fb5eddf5cfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keytf1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081c1a00f27490bde",
            "private_dns": "ip-10-0-10-13.ec2.internal",
            "private_ip": "10.0.10.13",
            "public_ip": "54.196.244.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a29877b542998ae2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060264b00bf85a033",
            "tags": {
              "Env": "testing",
              "Name": "TFcourse-3"
            },
            "tags_all": {
              "Env": "testing",
              "Name": "TFcourse-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a8f6b4e0f5dc488"
            ]
          },
          "dependencies": [
            "aws_security_group.tf",
            "aws_subnet.subnettf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:internet-gateway/igw-0076b9471c83c7812",
            "id": "igw-0076b9471c83c7812",
            "owner_id": "258372532888",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-0a3902b3ee4a2d610"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:route-table/rtb-09e56e0ffc8e804d3",
            "id": "rtb-09e56e0ffc8e804d3",
            "owner_id": "258372532888",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0076b9471c83c7812",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3902b3ee4a2d610"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ba9ba63e048dd9",
            "route_table_id": "rtb-09e56e0ffc8e804d3",
            "subnet_id": "subnet-060264b00bf85a033"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.rtb-tf",
            "aws_subnet.subnettf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0532db11ce0c3b875",
            "route_table_id": "rtb-09e56e0ffc8e804d3",
            "subnet_id": "subnet-03390a0404172939b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.rtb-tf",
            "aws_subnet.subnet2tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta3-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bcc62d909b990c5",
            "route_table_id": "rtb-09e56e0ffc8e804d3",
            "subnet_id": "subnet-0717ff70114ffdcde"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.rtb-tf",
            "aws_subnet.subnet3tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:security-group/sg-03a8f6b4e0f5dc488",
            "description": "permitir acceso por ssh y http ssl ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8f6b4e0f5dc488",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "value",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "value",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "value",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-ssl",
            "name_prefix": "",
            "owner_id": "258372532888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh and ssl"
            },
            "tags_all": {
              "Name": "ssh and ssl"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3902b3ee4a2d610"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:subnet/subnet-03390a0404172939b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-03390a0404172939b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258372532888",
            "vpc_id": "vpc-0a3902b3ee4a2d610"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:subnet/subnet-0717ff70114ffdcde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0717ff70114ffdcde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258372532888",
            "vpc_id": "vpc-0a3902b3ee4a2d610"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnettf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:subnet/subnet-060264b00bf85a033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-060264b00bf85a033",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "258372532888",
            "vpc_id": "vpc-0a3902b3ee4a2d610"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258372532888:vpc/vpc-0a3902b3ee4a2d610",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de4e58bf2447c925",
            "default_route_table_id": "rtb-08145671d7f96c42a",
            "default_security_group_id": "sg-0f10593f6ce2cd21b",
            "dhcp_options_id": "dopt-c694d0bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a3902b3ee4a2d610",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08145671d7f96c42a",
            "owner_id": "258372532888",
            "tags": {
              "Mame": "vpc-tf"
            },
            "tags_all": {
              "Mame": "vpc-tf"
            }
          }
        }
      ]
    }
  ]
}